<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Color_principal"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.jimmy.vista.DetailActivity"
    android:gravity="center">

    <!-- Inicio de componente datos remitente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wall_details_general"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_reporte_remitente"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/wall_top_details"
            android:padding="5dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/tx_nombre"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@drawable/wall_transparent_details"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/tx_email"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@drawable/wall_transparent_details"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Fin de componente datos remitente -->
    <!-- Inicio de componente datos del reporte -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wall_details_general"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_reporte_reporte"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/wall_top_details"
            android:padding="5dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tx_sede"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_sede"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wall_transparent_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tx_sala"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_sala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wall_transparent_details"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tx_pc"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wall_transparent_details"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tx_codigo"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wall_transparent_details"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tx_estado"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wall_transparent_details"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="2"
                android:text="@string/tx_descripcion"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lbl_details_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wall_transparent_descripcion"
                android:padding="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Fin de component datos del reporte -->
    <!-- Initio de component modification estado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wall_details_general"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_reporte_modificar"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/wall_top_details"
            android:padding="5dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tx_estado_solucion"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/check_solucionado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tx_estado_proceso"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <CheckBox
                android:id="@+id/check_proceso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <Button
            android:onClick="actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_buttom_actualizar"
            android:background="@drawable/buttom_style_ripple"
            android:backgroundTint="@color/Color_buttom_update"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>
    <!-- Fin de component modification estado -->
    <Button
        android:onClick="delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_buttom_eliminar"
        android:background="@drawable/buttom_style_ripple"
        android:backgroundTint="@color/Color_buttom_delete"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</LinearLayout>