<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_background_deg"
    tools:context="com.jimmy.vista.Interface_formulary">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/et_formulario"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wall_transparent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp">
        <!--INICIO DE FORMULARIO-->
        <EditText
            android:id="@+id/txt_nombre_completo_"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints="Nombre"
            android:background="@drawable/field_text_style"
            android:hint="@string/text_field_hint_nombre"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Color_terciario"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txt_correo_institucional_"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints="Nombre"
            android:background="@drawable/field_text_style"
            android:hint="@string/et_correo"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Color_terciario"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/spinner_sede"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/style_spinner"/>

        <Spinner
            android:id="@+id/spinner_sala"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/style_spinner" />

        <Spinner
            android:id="@+id/spinner_pc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/style_spinner" />

        <EditText
            android:id="@+id/txt_descripcion_problema_"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/field_text_style_descripcion"
            android:gravity="start|top"
            android:hint="@string/et_descripcion"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Color_terciario"
            android:fontFamily="@font/poppins_light"
            android:autofillHints="Descripcion" />

        <Button
            android:id="@+id/btn_enviar_reporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttom_style_ripple"
            android:backgroundTint="@color/Color_principal_dark"
            android:fontFamily="@font/poppins_light"
            android:onClick="generarReporte"
            android:text="@string/tx_buttom_enviar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <!--FIN DE FORMULARIO-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>