<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:name=".MainActivity"
    android:theme="@style/StatusBarStyle"
    tools:context=".MainActivity">
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/Color_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave_home"
        app:layout_constraintBottom_toTopOf="@+id/btn_ver_reporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_generar_reporte"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttom_style_ripple"
        android:backgroundTint="@color/Color_principal_light"
        android:fontFamily="@font/poppins_light"
        android:onClick="goGenerarReporte"
        android:text="@string/tx_buttom_generar_reporte"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_reporte" />

    <Button
        android:id="@+id/btn_administrador"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttom_style_ripple"
        android:backgroundTint="@color/Color_secundario"
        android:fontFamily="@font/poppins_light"
        android:onClick="goAdministrador"
        android:text="@string/tx_buttom_administrador"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generar_reporte"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_ver_reporte"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="@drawable/buttom_style_ripple"
        android:backgroundTint="@color/Color_principal_dark"
        android:fontFamily="@font/poppins_light"
        android:onClick="goVerReporte"
        android:text="@string/tx_buttom_ver_reporte"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave_home"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_administrador"
        app:layout_constraintVertical_bias="1.0" />
    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/Color_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>